# cl-backend

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-0f2d153af5a2f048ebc784f08a90fcade6d1c7474a825e7d55f2888588037feb.json  query-21dfbe8c43d08fd569ec3aa0b1330f62917f572c6e2cbf9f69c86d1b4e1ab1bf.json  query-23697377fa80036e264effbd2a1969389f43e36927f37c1323b2f5da8537e79a.json  query-2aff4fa29bb3cb8443a1ce205633fc02ddc216cc00895f40ed71824e3c8e05a3.json  query-2e77ef17f0836f516b113faf71783186a94c47e6a684f7f745d370aca3fea09d.json  query-3278819d6a21d9dac7368011fa7474eb182ec38bb81b79638a353c522255df64.json  query-3d365f5b706d7fb207301bb6725f799c1a23c190c04ed7c341e1c04aa6f97c78.json  query-41f0bb9893f18fc7067b08663643764ba36038ff8f3f4efbcf7acbab295cf4ff.json  query-4887fb81bbca6ddf3649eaf89720dc1d5d310e221836aa0bf54f4188fb1b86d7.json  query-5383705e70f7e2d5612ec0519ae8e49aeeb82b7d10c82c44f5ae8efeb6518d9c.json  query-594e62c66452586afd71c2a8abd36326696695efc59f0ffb9425adeb558d2bad.json  query-5ee55cd6ff775760f1339ff2e7db2fabefea163080604b5a2d8eef78dcfa2b29.json  query-63278fb1db383669bffa45ebab23d223e418b99a13d14cb941012c119a9c8b67.json  query-653fbf0d65667220acc2201ca81262008947b2d9472b8a466060478ed5c915c5.json  query-676959c0f5f7d8712d12204634ba5554738abc4e2d7316431b5f46db07db9b0b.json  query-69f3b28611c9511cb8b96a4d43606ce1f12c633ad0dea92cdd30b7c23eed5feb.json  query-7066fdba1aa177553e1e32a58ae2d42a7031e87df7a42646fafc95f6c80b150b.json  query-7a7567f341b4d220021be50e3955d9db11d68c3721b1fa64a5fb0bc0e8e827d7.json  query-85122c7f34f12c684db7bc59817ed33c53831095a22804050a58d363d501933a.json  query-8c351849e9ee9c65f52ead6b7ab2675ee51e818febdd5c5c7c6978549e574d55.json  query-8fcd2f226d83351c761c4367feb7a6d6165206940197e2229358a75acd73c76f.json  query-8ffaf2595290161ced0d2b7450f181fb6b824459096eba69fdc8e6b3e12c5924.json  query-9da8e578a64dc8390aa102bf3aa720591e0726191e07da0f8058c0e750411b51.json  query-9f235512c570d6d5f5d4ad2851c52c7a1b92f16560e873eada07eb0db6cd31d6.json  query-a3467a78a13dc20b8ed52eb9bed58b505ecf148d31a4bf2be994cbfed2a7c1cc.json  query-ab20846ce063f2be2e2f4ac6f7535bae689d9a9aec25dd4d3b078e54b6af9ad9.json  query-addc1db7cf0eafbd5fb4ae7333b29bce9385b21f5410420d4719376b7ef34615.json  query-b0ddcea67faa0e979da6bc2ae24f9cbdc15f0067825130cd2bab8b4f792be0cd.json  query-b3476504b82263330ea83ba7abd07ab5281f6787b742d1e8393187bc635100e0.json  query-bc256d1e4c724afae30c99169b1cc80813dacac367a90c7a279c1c3439361ad8.json  query-be6bdfac1a3fe16e828c2040c7b2e090878bfea88d48aedcf91cbc15baea7e63.json  query-c48bebeca2d0a55cfb38bd33791ca7801d808e1fd7530cf3d1bd301b51d351a5.json  query-cb5f7928875960b580c7834c3c8346a8710a58e9831dcd8e43bfdf061840d613.json  (+10 more)
src/: database.rs  (+4 more)
(+151 files in other folders)
