[package]
name = "cl-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clerk-rs = { version = "0.3.1", features = ["axum"] }
dotenvy = "0.15.7"
tokio = { version = "1.39.2", features = ["full"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
anyhow = "1.0.86"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", features = ["postgres", "uuid", "chrono"] }
serde = "1.0.208"
specta = "1.0.5"
tower-http = {version = "0.5.2", features = ["cors"]}
http = "1.1.0"
uuid = "1.10.0"
chrono = "0.4.38"
serde_json = "1.0.128"
jsonwebtoken = "9.3.0"
biscuit = "0.7.0"
base64 = "0.22.1"
