[package]
name = "cl-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = [
    "macros",
    "tracing",
    "json",
] }
clerk-rs = { version = "0.3.1", features = ["axum"] }
tokio = { version = "1.28.2", features = ["full"] }
shuttle-axum = { version = "0.52.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = { version = "0.52.0", default-features = false }
anyhow = "1.0.86"
shuttle-shared-db = { version = "0.52.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["postgres", "uuid", "chrono"] }
serde = "1.0.208"
http = "1.1.0"
uuid = {version = "1.10.0", features = ["serde"] }
chrono = "0.4.38"
serde_json = "1.0.128"
base64 = "0.22.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
cargo-watch = "8.5.2"
reqwest = { version = "0.12.12", features = ["json"] }
lazy_static = "1.5.0"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipauto = "0.2.0"
